--- a/index.html
+++ b/index.html
@@ -71,7 +71,38 @@
             <div class="hero-image">
                 <button class="btn-back"><i class="fas fa-arrow-left"></i> Voltar</button>
             </div>
-            
+            <section id="list-view" class="view hidden">
+            <div class="park-content">
+                <h1 class="park-title">Todos os Parques</h1>
+                <p>Conteúdo da lista de 19 parques será renderizado aqui.</p>
+            </div>
+        </section>
+
+        <section id="badges-view" class="view hidden">
+             <div class="park-content">
+                <h1 class="park-title">Minhas Conquistas</h1>
+                <p>Galeria de Selos e XP.</p>
+            </div>
+        </section>
+
+        <section id="social-view" class="view hidden">
+             <div class="park-content">
+                <h1 class="park-title">Feed de Exploradores</h1>
+                <p>Aqui virá o compartilhamento e o Leaderboard.</p>
+            </div>
+        </section>
+        
+    </main>
+    ```
+
+#### **Passo 2: Resolver a Falha no Celular (Cache)**
+
+1.  **Atualize o `index.html` e o `app.js` no GitHub** com a correção do **Passo 1**.
+2.  **No Celular:** Limpe o cache do seu navegador ou abra o link em uma **aba anônima/privada**.
+
+**Aguarde 1 minuto (tempo do GitHub Pages) e recarregue o link no computador e no celular.**
+
+O resultado no computador deve ser o aplicativo carregado, mostrando a Home View, e o Console limpo, exceto pela mensagem de sucesso. Qual o resultado final após o Passo 1?
             <div class="park-content">
                 <h1 class="park-title">PE Ibitipoca</h1>
 
@@ -116,4 +147,5 @@
 
     <script src="app.js"></script> 
 </body>
+
 </html>
