--- a/index.html
+++ b/index.html
@@ -51,18 +51,15 @@
                         <div id="progress-bar-container" class="card">
             </div>
 
-                        <div class="map-area map-responsive">
-                <iframe 
-                    src="https://www.google.com/maps/d/embed?mid=1wh7GxT4BGPTMWEfc1UI_R9yhgosw4dQ&ehbc=2E312F" 
-                    width="100%" 
-                    height="100%" 
-                    frameborder="0" 
-                    style="border:0;" 
-                    allowfullscreen="" 
-                    loading="lazy" 
-                    referrerpolicy="no-referrer-when-downgrade">
-                </iframe>
-            </div>
+      <div class="map-area map-responsive" style="min-height:260px;">
+        <iframe
+          title="Mapa interativo - Trilhas de Minas"
+          src="https://www.google.com/maps/d/embed?mid=1wh7GxT4BGPTMWEfc1UI_R9yhgosw4dQ&ehbc=2E312F"
+          width="100%" height="100%" style="border:0;"
+          loading="lazy" referrerpolicy="no-referrer-when-downgrade"
+          aria-label="Mapa com trilhas e parques">
+        </iframe>
+      </div>
 
                         <div class="card featured-card">
                 <h3>Próximo Desafio: Ibitipoca!</h3>
@@ -132,3 +129,4 @@
     <script src="app.js"></script> 
 </body>
 </html>
+
