--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
                         <div id="progress-bar-container" class="card">
             </div>
 
-      <div class="map-area map-responsive" style="min-height:260px;">
+      <div class="map-area map-responsive">
         <iframe
           title="Mapa interativo - Trilhas de Minas"
           src="https://www.google.com/maps/d/embed?mid=1wh7GxT4BGPTMWEfc1UI_R9yhgosw4dQ&ehbc=2E312F"
-          width="100%" height="100%" style="border:0;"
+          width="100%" height="100%" style="border:15;"
           loading="lazy" referrerpolicy="no-referrer-when-downgrade"
           aria-label="Mapa com trilhas e parques">
         </iframe>
@@ -129,4 +129,3 @@
     <script src="app.js"></script> 
 </body>
 </html>
-
